# obadh_engine

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  KNOWN_ISSUES.md  LICENSE  Makefile  README.md  build.sh  init.sh
.github/workflows/: ci.yml
benches/: hot_path.rs
data/: conjuncts.csv
data/autocorrect/: README.md
data/autocorrect/lexicons/curated/: epub_bn.tsv
data/autocorrect/lexicons/derived/: loan_bn.tsv
data/autocorrect/lexicons/loanwords/: en_bn_loanwords.tsv
data/autocorrect/lexicons/raw/: epub_bn.tsv
data/autocorrect/manifests/: coverage512_char_reranker_2026-06-20.json
data/autocorrect/models/: en_bn_loanwords.fst
data/rules/: consonants.md  deliberate_input_corpus.md  simplified_rules.md  vowels.md
docs/: index.html
docs/assets/autocorrect/: char_candidate_reranker.json
docs/assets/autosuggest/: ngram.manifest.json
docs/css/: styles.css
docs/js/: obadh_engine.js  obadh_engine_bg.wasm
include/: obadh.h
ml/: README.md  pyproject.toml
ml/data/: SOURCES.md  corpus_v0_manifest.example.json  source_registry.json
ml/obadh_ml/: __init__.py  schema.py
ml/obadh_ml/data/: __init__.py  audit.py  corpus.py  dakshina.py  sources.py
ml/obadh_ml/eval/: __init__.py  metrics.py
ml/obadh_ml/export/: __init__.py  onnx.py
ml/obadh_ml/features/: __init__.py  runner.py
ml/obadh_ml/models/: __init__.py  bigru_ctc.py
ml/scripts/: audit_pairs.py  build_obadh_features.py  download_dakshina.py  export_onnx.py  prepare_corpus.py  quantize_onnx.py
ml/tests/: test_corpus_admission.py  test_dakshina_schema.py
models/: README.md
src/: cabi.rs  fingerprint.rs  lib.rs
src/autocorrect/: artifact.rs  bangla.rs  char_reranker.rs  edit.rs  fst_lexicon.rs  lexicon.rs  loanword.rs  mlp.rs  mod.rs  morphology.rs  phoneme.rs  qwerty.rs  ranker.rs  roman_edit.rs  roman_repair.rs  skeleton.rs
src/autosuggest/: adaptive.rs  artifact.rs  generator.rs  lm.rs  mod.rs  open_vocab.rs  rerank.rs  scorer.rs
src/definitions/: conjuncts.rs  consonants.rs  diacritics.rs  mod.rs  numerals.rs  symbols.rs  vowels.rs
src/definitions/conjuncts/: canonical.rs  rules.rs  trie.rs
src/engine/: inline_parts.rs  mod.rs  sanitizer.rs  text_boundary.rs  tokenizer.rs  transliterator.rs
src/engine/tokenizer/: conjunct_runs.rs  diacritics.rs  explicit_hasant.rs  forms.rs  long_iya.rs  normalization.rs  parts.rs  patterns.rs  scan_hints.rs  scanner.rs
src/engine/transliterator/: boundary.rs  components.rs  conjunct.rs  parts.rs  syllable.rs  word.rs
src/ml/: features.rs  mod.rs
src/wasm/: mod.rs
tests/: autocorrect_cli_tests.rs  autocorrect_tests.rs  basic_tests.rs  conjunct_tests.rs  hasant_tests.rs  juktoborno_corpus_tests.rs  ml_feature_tests.rs  orthography_tests.rs  phola_tests.rs  property_tests.rs  rule_source_tests.rs  sanitizer_tests.rs  tokenizer_tests.rs  valid_conjunct_tests.rs
tools/autocorrect/: bangla_lexicon_utils.py  curate_lexicon_sources.py  english_loanword_dataset.py  extract_news_json_lexicon.py  train_candidate_reranker.py  train_char_candidate_reranker.py
tools/autosuggest/: build_ngram_lm.py  build_sentence_dataset.py  build_vocab.py  common.py  eval_ngram_lm.py  eval_scorer_policy.py  export_next_word_lm.py  package_scorer.py  probe_context_order.py  requirements.txt  train_candidate_reranker.py  train_next_word_lm.py  verify_generator_package.py
tools/autosuggest/neural/: __init__.py  build_vocab.py  common.py  data.py  export.py  model.py  predict.py  prepare_dataset.py  train.py
www/: index.html  package-lock.json  package.json
www/assets/autocorrect/: bn.lex
www/assets/autosuggest/: manifest.json  ngram.manifest.json  vocab.tsv
www/css/: styles.css
www/js/: obadh_engine.js  obadh_engine_bg.wasm
