[package]
name = "obadh_engine"
version = "0.2.1"
edition = "2021"
rust-version = "1.82"
authors = ["NSS Sayom"]
description = "A linguistically accurate Roman to Bengali transliteration engine"
repository = "https://github.com/nsssayom/obadh_engine"
license = "MIT"
keywords = ["bengali", "transliteration", "linguistics", "i18n"]
categories = ["text-processing", "internationalization"]
exclude = [
    "/benches/**",
    "/data/**",
    "/docs/**",
    "/tests/**",
    "/www/**",
    "/Makefile",
    "/build.sh",
]

[lib]
crate-type = ["rlib", "cdylib"]
path = "src/lib.rs"
bench = false

[[bin]]
name = "obadh"
path = "src/bin/obadh.rs"
bench = false

[[bin]]
name = "tokenizer"
path = "src/bin/tokenizer.rs"
bench = false

[[bin]]
name = "obadh-autocorrect"
path = "src/bin/obadh-autocorrect.rs"
bench = false

[[bench]]
name = "hot_path"
harness = false

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI support
clap = { version = "=4.5.32", features = ["derive"] }

# WASM support
wasm-bindgen = "0.2.87"
serde-wasm-bindgen = "0.5"
web-sys = { version = "0.3.64", features = ["Window", "Performance"] }
console_error_panic_hook = { version = "0.1.7", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
unicode-normalization = "=0.1.25"
zip = { version = "=5.1.1", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support", "rayon"] } # For benchmarking
wasm-bindgen-test = "0.3.37" # For testing WASM

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Optimize for speed
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.wasm-release]
inherits = "release"
lto = true
opt-level = 'z'  # Optimize for size for WASM
panic = 'abort'
